--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
 
                 <li>
                     <a href="projects/mienkerbt/index.html">Mienkerbt<br />
-                        html and javascript based Minecraft®-like game
+                        html and javascript based Minecraft(r)-like game
+                         <img src="projects/mienkerbt/mienkerpt.jpg" />
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="projects/TellMeMyGrade/TellMeMyGrade.html">GPA calculator<br />
+                        a form that calculates your GPA
                          <img src="projects/mienkerbt/mienkerpt.jpg" />
                     </a>
                 </li>
@@ -84,7 +92,6 @@
         <div data-role="footer" data-position="fixed">
             <h1>hi</h1>
         </div>
-        <!-- end footer -->
 
     </div>
     <!-- end javbascript page -->
@@ -114,10 +121,41 @@
         <div data-role="footer" data-position="fixed">
             <h1>hi</h1>
         </div>
-        <!-- end footer -->
 
     </div>
     <!-- end html page -->
+
+        <!-- c# page -->
+    <div data-role="page" id="c">
+
+
+        <div data-role="header">
+            <h1>Javascript </h1>
+            <a href="#home" data-role="button" data-icon="home" class="ui-li-right">Home</a>
+        </div>
+
+        <div data-role="content">
+            <ul data-role="listview">
+                <li>
+                    <a href="https://skydrive.live.com/redir?resid=77A269756B8A6E86!30263">Math quiz<br />
+                        a c# created, text based math quiz!
+                    <img src="projects/quiz.jpg" />
+                    </a>
+
+                </li>
+                <li>
+                    <a href="https://dl.dropboxusercontent.com/s/akkzcwzwypzhl1g/QuizProgram.exe?token_hash=AAEB1H5uvnPw_9Xh5hjI4B_6JrsJBFLm0riNfiDNWwWulg&dl=1">Math quiz exe download</a>
+                </li>
+            </ul>
+        </div>
+
+
+        <div data-role="footer" data-position="fixed">
+            <h1>hi</h1>
+        </div>
+
+    </div>
+    <!-- end c# page -->
 
 
 
