--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
         <div data-role="content">
             <ul data-role="listview">
 
-                <li><a href="#javascript">javascript</a></li>
-                <li><a href="#html">html</a></li>
+                <li><a href="#javascript">
+                    
+                    javascript
+                    
+                    </a><img src="images/JavaScriptLogo.png"/></li>
+                <li><a href="#html">
+                    <img src="images/th.jpg"/>
+                    html</a></li>
                 <li><a href="#c">c#</a></li>
 
             </ul>
@@ -125,7 +131,7 @@
     </div>
     <!-- end html page -->
 
-        <!-- c# page -->
+    <!-- c# page -->
     <div data-role="page" id="c">
 
 
