--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div data-role="thebackground">
 
 
-<input type="button"  onclick="doit()" value="click me to pick a dropbox thing!" />
+<input type="button"  onclick="doit()" value="click me to grab something from your dropbox" />
             <img id="pic"/>
         </div>
 
