--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a href="#home" data-role="button" data-icon="home" class="ui-li-right">Home</a>
         </div>
         <div data-role="content">
+            <h1> list of skills~ </h1>
             <ul data-role="listview">
 
                 <li><a href="#javascript">javascript</a></li>
